修改部分类的名字.重构项目文件夹结构

--- a/Lucuber/Base.lproj/AddFeed.storyboard
+++ b/Lucuber/Base.lproj/AddFeed.storyboard
@@ -5,10 +5,10 @@
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
-        <!--Add Feed View Controller-->
+        <!--New Feed View Controller-->
         <scene sceneID="yiG-pO-2yR">
             <objects>
-                <viewController automaticallyAdjustsScrollViewInsets="NO" id="aev-nc-3eR" customClass="AddFeedViewController" customModule="Lucuber" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="aev-nc-3eR" customClass="NewFeedViewController" customModule="Lucuber" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="J2P-oz-7vA"/>
                         <viewControllerLayoutGuide type="bottom" id="e50-A7-sT9"/>
