NewFeed添加公式时, 优先弹出公式界面,之后再Push到NewFeed界面. 添加String的扩展, 判断是否是仅包含空格的状态. 用于textField和TextView判断用户输入内容是否Ok

--- a/Lucuber/Base.lproj/AddFeed.storyboard
+++ b/Lucuber/Base.lproj/AddFeed.storyboard
@@ -8,7 +8,7 @@
         <!--New Feed View Controller-->
         <scene sceneID="yiG-pO-2yR">
             <objects>
-                <viewController automaticallyAdjustsScrollViewInsets="NO" id="aev-nc-3eR" customClass="NewFeedViewController" customModule="Lucuber" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="NewFeedViewController" automaticallyAdjustsScrollViewInsets="NO" id="aev-nc-3eR" customClass="NewFeedViewController" customModule="Lucuber" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="J2P-oz-7vA"/>
                         <viewControllerLayoutGuide type="bottom" id="e50-A7-sT9"/>
