增加Feed界面弹出Media资源的预览Window, 新建UIWindows, 其中包含一个CollectionView当做预览媒体文件的容器. 自定义CollectionCell叫做MediaViewCell -> 其中包括一个容器View, 一个scrollView, scrollView中有一个imageView. 在其中定义了其图片的居中显示,以及最小显示比例. 接下来需要实现双击方法图片的功能.

--- a/Lucuber/Base.lproj/AddFeed.storyboard
+++ b/Lucuber/Base.lproj/AddFeed.storyboard
@@ -50,7 +50,7 @@
                                                             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <subviews>
-                                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="feed_media_add" translatesAutoresizingMaskIntoConstraints="NO" id="2e9-nN-PYX">
+                                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="feed_media_add" translatesAutoresizingMaskIntoConstraints="NO" id="2e9-nN-PYX">
                                                                     <rect key="frame" x="10" y="10" width="30" height="30"/>
                                                                 </imageView>
                                                             </subviews>
