--- a/Lucuber/ViewControllers/MediaPreview/MediaPreview.storyboard
+++ b/Lucuber/ViewControllers/MediaPreview/MediaPreview.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Media Preview View Controller-->
@@ -16,27 +17,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ca6-na-67o">
-                                <rect key="frame" x="0.0" y="666" width="375" height="1"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="1" id="R0j-YB-yh4"/>
-                                </constraints>
-                            </view>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="0az-CR-xdI">
-                                <rect key="frame" x="0.0" y="20" width="375" height="646"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="cUq-xq-Xja">
-                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="itemSize" width="0.0" height="0.0"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="B8g-4n-1tD">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
@@ -47,11 +40,19 @@
                                     <outlet property="delegate" destination="2Kf-7o-Oer" id="vmQ-FS-0k5"/>
                                 </connections>
                             </collectionView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ca6-na-67o" customClass="MediaControlView" customModule="Lucuber" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="587" width="375" height="80"/>
+                                <color key="backgroundColor" red="0.66902792453765869" green="0.73128575086593628" blue="0.94889926910400391" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="R0j-YB-yh4"/>
+                                </constraints>
+                            </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.1960784314" green="0.65490196079999996" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="ca6-na-67o" firstAttribute="top" secondItem="0az-CR-xdI" secondAttribute="bottom" id="Icu-mO-Z3L"/>
                             <constraint firstAttribute="trailing" secondItem="ca6-na-67o" secondAttribute="trailing" id="IdV-Sf-wJW"/>
+                            <constraint firstItem="0az-CR-xdI" firstAttribute="top" secondItem="d1Y-v8-fLj" secondAttribute="topMargin" id="JGo-vS-Tq7"/>
                             <constraint firstItem="ca6-na-67o" firstAttribute="top" secondItem="0az-CR-xdI" secondAttribute="bottom" id="KGz-9F-Qfj"/>
                             <constraint firstItem="0az-CR-xdI" firstAttribute="top" secondItem="czY-Ak-VyD" secondAttribute="bottom" id="KO3-oT-Zsh"/>
                             <constraint firstItem="ca6-na-67o" firstAttribute="leading" secondItem="d1Y-v8-fLj" secondAttribute="leading" id="PMJ-tL-FdU"/>
@@ -59,21 +60,26 @@
                             <constraint firstItem="0az-CR-xdI" firstAttribute="leading" secondItem="d1Y-v8-fLj" secondAttribute="leading" id="Yr1-SH-rq0"/>
                             <constraint firstItem="qta-Zh-I61" firstAttribute="top" secondItem="0az-CR-xdI" secondAttribute="bottom" id="gPm-GK-hdj"/>
                             <constraint firstItem="qta-Zh-I61" firstAttribute="top" secondItem="ca6-na-67o" secondAttribute="bottom" id="pg0-Xe-bfR"/>
+                            <constraint firstAttribute="bottom" secondItem="0az-CR-xdI" secondAttribute="bottom" id="tjr-lU-Yfg"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
+                                <exclude reference="KO3-oT-Zsh"/>
+                                <exclude reference="Icu-mO-Z3L"/>
+                                <exclude reference="KGz-9F-Qfj"/>
                                 <exclude reference="gPm-GK-hdj"/>
                             </mask>
                         </variation>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
+                        <outlet property="mediaControlView" destination="ca6-na-67o" id="95q-MQ-FZy"/>
                         <outlet property="mediasCollectionView" destination="0az-CR-xdI" id="m5g-t1-rt8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ure-hh-P7z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="285.5" y="231.5"/>
+            <point key="canvasLocation" x="101.5" y="197.5"/>
         </scene>
     </scenes>
 </document>
