封装Feed中的imageURL -> ImageAccachment.  尝试实现ImageCache

--- a/Lucuber/ViewControllers/MediaPreview/MediaPreview.storyboard
+++ b/Lucuber/ViewControllers/MediaPreview/MediaPreview.storyboard
@@ -26,15 +26,7 @@
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="B8g-4n-1tD">
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        </view>
-                                    </collectionViewCell>
-                                </cells>
+                                <cells/>
                                 <connections>
                                     <outlet property="dataSource" destination="2Kf-7o-Oer" id="ohU-Kw-iW7"/>
                                     <outlet property="delegate" destination="2Kf-7o-Oer" id="vmQ-FS-0k5"/>
