--- a/Lucuber/Views/NewFormula/FormulaTextCell/FormulaTextViewCell.xib
+++ b/Lucuber/Views/NewFormula/FormulaTextCell/FormulaTextViewCell.xib
@@ -39,16 +39,25 @@
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="FR" translatesAutoresizingMaskIntoConstraints="NO" id="XM0-xD-dtr">
+                    <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="FR" translatesAutoresizingMaskIntoConstraints="NO" id="XM0-xD-dtr">
                         <rect key="frame" x="20" y="23" width="20" height="20"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="20" id="6E9-dO-O0w"/>
                             <constraint firstAttribute="height" constant="20" id="Dc0-ih-Ykz"/>
                         </constraints>
                     </imageView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b0c-Ui-9tF" customClass="RotationButton" customModule="Lucuber" customModuleProvider="target">
+                        <rect key="frame" x="20" y="23" width="20" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="S2D-HR-qeE"/>
+                            <constraint firstAttribute="width" constant="20" id="TOb-Og-KqM"/>
+                        </constraints>
+                        <state key="normal" image="FR_gray"/>
+                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="k22-5h-CPC" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="3Nk-Jt-d3w"/>
+                    <constraint firstItem="b0c-Ui-9tF" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="Dyo-JB-3Fc"/>
                     <constraint firstAttribute="bottom" secondItem="k22-5h-CPC" secondAttribute="bottom" constant="10" id="I2A-Gb-OHK"/>
                     <constraint firstAttribute="bottom" secondItem="8dt-wG-5Ix" secondAttribute="bottom" constant="5" id="LOc-Wh-YqS"/>
                     <constraint firstItem="8dt-wG-5Ix" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="ahL-va-JnD"/>
@@ -59,6 +68,7 @@
                     <constraint firstItem="XM0-xD-dtr" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="jWd-fv-VZk"/>
                     <constraint firstItem="8dt-wG-5Ix" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="60" id="lKx-YQ-iiB"/>
                     <constraint firstItem="RzW-IZ-j14" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="mch-qt-XgW"/>
+                    <constraint firstItem="b0c-Ui-9tF" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="tcD-ak-YfW"/>
                     <constraint firstItem="k22-5h-CPC" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="10" id="wFy-EG-ZfH"/>
                     <constraint firstAttribute="trailing" secondItem="k22-5h-CPC" secondAttribute="trailing" constant="40" id="wwO-5H-caN"/>
                 </constraints>
@@ -72,6 +82,7 @@
                 <outlet property="formulaLabel" destination="k22-5h-CPC" id="tHJ-XB-P6w"/>
                 <outlet property="indicaterImageView" destination="XM0-xD-dtr" id="B83-Mq-Ebk"/>
                 <outlet property="placeholderLabel" destination="RzW-IZ-j14" id="Weh-30-x0M"/>
+                <outlet property="rotationButton" destination="b0c-Ui-9tF" id="ly8-oK-vgF"/>
                 <outlet property="textView" destination="8dt-wG-5Ix" id="bu8-hK-ZVf"/>
             </connections>
             <point key="canvasLocation" x="305" y="518"/>
@@ -79,5 +90,6 @@
     </objects>
     <resources>
         <image name="FR" width="30" height="30"/>
+        <image name="FR_gray" width="30" height="30"/>
     </resources>
 </document>
