实现创建Formula公式的Rotation改变和inputAccessoryView的功能实现.接下来需要实现clearButton的功能, 然后完善其UI设计

--- a/Lucuber/Views/NewFormula/FormulaTextCell/FormulaTextViewCell.xib
+++ b/Lucuber/Views/NewFormula/FormulaTextCell/FormulaTextViewCell.xib
@@ -52,7 +52,7 @@
                             <constraint firstAttribute="height" constant="20" id="S2D-HR-qeE"/>
                             <constraint firstAttribute="width" constant="20" id="TOb-Og-KqM"/>
                         </constraints>
-                        <state key="normal" image="FR_gray"/>
+                        <state key="normal" backgroundImage="FR"/>
                     </button>
                 </subviews>
                 <constraints>
@@ -90,6 +90,5 @@
     </objects>
     <resources>
         <image name="FR" width="30" height="30"/>
-        <image name="FR_gray" width="30" height="30"/>
     </resources>
 </document>
